--- a/seeds/seeds.yml
+++ b/seeds/seeds.yml
@@ -1,19 +1,19 @@
 version: 2
 
 seeds:
-  - name: chronic_disease_hierarchy
-    description: A list of the diagnoses codes and their long and short names along with grouping logic classifying each code into a dissease group and a disease family group.
+  - name: chronic_conditions_hierarchy
+    description: A list of the diagnoses codes and their long and short names along with grouping logic classifying each code into a condition group and a condition family group.
     config:
-      database: tuva
-      schema: chronic_disease_grouper
+      database: "{{ var('output_database') }}"
+      schema: "{{ var('output_schema') }}"
       enabled: true
-      alias: chronic_disease_grouper
-      tags: chronic_disease_grouper
+      alias: chronic_conditions_hierarchy
+      tags: chronic_conditions_hierarchy
     columns:
-      - name: disease_family
-        description: A higher level rollup grouping of diseases from the disease column
-      - name: disease
-        description: The name of the disease that each diagnosis code rolls up into
+      - name: condition_family
+        description: A higher level rollup grouping of conditions from the condition column
+      - name: condition
+        description: The name of the condition that each diagnosis code rolls up into
       - name: icd_10_cm_code
         description: The icd10 code
       - name: icd_10_cm_description
