--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -1,33 +1,15 @@
 name: 'tuva_chronic_conditions'
-version: '1.0.0'
+version: '0.0.1'
 config-version: 2
 
-profile: 'tuva_chronic_conditions'
+profile: 'default'
 
 vars:
-
-  source_name: tuva_core                  # configuration required
-                                       # name describing the dataset feeding
-                                       # this project - typically matches input
-                                       # schema name
-
-  input_database: tuva               # configuration required
-                                     # name of the database where sources
-                                     # feeding this project are stored
-
-  input_schema: core                 # configuration required
-                                     # name of the schema where sources
-                                     # feeding this project is stored
-
-  output_database: tuva              # configuration required
-                                     # name of the database where output of
-                                     # this project should be written
-
-  output_schema: tuva_chronic_conditions  # configuration required
-                                     # name of the schema where output of this
-                                     # project should be written
-
-  condition: "{{ source(var('source_name'),'condition') }}"                                     
+    condition: |
+        {% if var('tuva_chronic_conditions_condition_override',none) is not none %}{{var('tuva_chronic_conditions_condition_override')}}
+        {%- elif var('core_condition_override',none) is not none %}{{var('core_condition_override')}}
+        {%- else %}{{ref('claims_preprocessing__condition')}}
+        {% endif %}
 
 
 
