--- a/models/_models.yml
+++ b/models/_models.yml
@@ -7,9 +7,9 @@ models:
       config:
         database: "{{ var('tuva_chronic_conditions_database',var('tuva_database','tuva')) }}"
         schema: |
-        {%- if var('tuva_chronic_conditions_schema',None) != None -%}{{var('tuva_chronic_conditions_schema')}}
+          {%- if var('tuva_chronic_conditions_schema',None) != None -%}{{var('tuva_chronic_conditions_schema')}}
           {%- elif var('tuva_schema_prefix',None) != None -%}{{var('tuva_schema_prefix')}}_tuva_chronic_conditions
-            {% else %}tuva_chronic_conditions{%- endif -%}
+          {% else %}tuva_chronic_conditions{%- endif -%}
         alias: chronic_condition_groups
         tags: tuva_chronic_conditions
         materialized: table
@@ -21,16 +21,16 @@ models:
             tests:
               - unique
               - not_null
-    - name: chronic_conditions_long
+    - name: tuva_chronic_conditions__chronic_conditions_long
       description: > 
         This model creates one record per patient per condition using the tuva chronic conditions hierarchy 
         as the grouper. The model pulls in the first and last date of the diagnosis that flagged the patient for this condition group.
       config:
         database: "{{ var('tuva_chronic_conditions_database',var('tuva_database','tuva')) }}"
         schema: |
-        {%- if var('tuva_chronic_conditions_schema',None) != None -%}{{var('tuva_chronic_conditions_schema')}}
+          {%- if var('tuva_chronic_conditions_schema',None) != None -%}{{var('tuva_chronic_conditions_schema')}}
           {%- elif var('tuva_schema_prefix',None) != None -%}{{var('tuva_schema_prefix')}}_tuva_chronic_conditions
-            {% else %}tuva_chronic_conditions{%- endif -%}
+          {% else %}tuva_chronic_conditions{%- endif -%}
         alias: chronic_conditions_long
         tags: tuva_chronic_conditions
         materialized: table
@@ -48,14 +48,14 @@ models:
             description: The first date when a diagnosis code that rolls up to this condition was coded to this patient
           - name: last_diagnosis_date
             description: The last date when a diagnosis code that rolls up to this condition was coded to this patient
-    - name: chronic_conditions_wide
+    - name: tuva_chronic_conditions__chronic_conditions_wide
       description: This model creates one record per patient with flags for all the conditions in the tuva chronic conditions hierarchy. A patient will have a 1 in the column for a certain condition if they have every been coded with a diagnosis that rolls up to that condition and a 0 if not.
       config:
         database: "{{ var('tuva_chronic_conditions_database',var('tuva_database','tuva')) }}"
         schema: |
-        {%- if var('tuva_chronic_conditions_schema',None) != None -%}{{var('tuva_chronic_conditions_schema')}}
+          {%- if var('tuva_chronic_conditions_schema',None) != None -%}{{var('tuva_chronic_conditions_schema')}}
           {%- elif var('tuva_schema_prefix',None) != None -%}{{var('tuva_schema_prefix')}}_tuva_chronic_conditions
-            {% else %}tuva_chronic_conditions{%- endif -%}
+          {% else %}tuva_chronic_conditions{%- endif -%}
         alias: chronic_conditions_wide
         tags: tuva_chronic_conditions
         materialized: table
