--- a/seeds/seeds.yml
+++ b/seeds/seeds.yml
@@ -9,7 +9,7 @@ seeds:
         {%- if var('tuva_chronic_conditions_schema',None) != None -%}{{var('tuva_chronic_conditions_schema')}}
         {%- elif var('tuva_schema_prefix',None) != None -%}{{var('tuva_schema_prefix')}}_tuva_chronic_conditions
         {% else %}tuva_chronic_conditions{%- endif -%}
-      enabled: "{{ var('data_profiling_enabled',var('tuva_packages_enabled',True)) }}"
+      enabled: "{{ var('tuva_chronic_conditions_enabled',var('tuva_packages_enabled',True)) }}"
       alias: chronic_conditions_hierarchy
       tags: tuva_chronic_conditions
     columns:
