--- a/docs/docs_generate/models/_models.yml
+++ b/docs/docs_generate/models/_models.yml
@@ -7,7 +7,8 @@ models:
       schema: tuva_chronic_condition_input
     description: > 
       The Tuva chronic conditions package uses the condition output from claims_preprocessing as an input.  
-      If claims preprocessing is bypassed and a custom condition model is used, this model represents the minimum required data elements needed for readmissions to function.
+      If claims preprocessing is bypassed and a custom condition model is used, this model represents the minimum required data elements needed for Tuva Chronic Condition
+      to function.
     columns:
       - name: patient_id
         description: The unique identifier for a patient
