--- a/models/_models.yml
+++ b/models/_models.yml
@@ -48,7 +48,7 @@ models:
             description: The first date when a diagnosis code that rolls up to this condition was coded to this patient
           - name: last_diagnosis_date
             description: The last date when a diagnosis code that rolls up to this condition was coded to this patient
-    - name: final_tuva_chronic_conditions__chronic_conditions_wide
+    - name: tuva_chronic_conditions__chronic_conditions_wide
       description: This model creates one record per patient with flags for all the conditions in the tuva chronic conditions hierarchy. A patient will have a 1 in the column for a certain condition if they have every been coded with a diagnosis that rolls up to that condition and a 0 if not.
       config:
         database: "{{ var('tuva_chronic_conditions_database',var('tuva_database','tuva')) }}"
@@ -56,7 +56,7 @@ models:
           {%- if var('tuva_chronic_conditions_schema',None) != None -%}{{var('tuva_chronic_conditions_schema')}}
           {%- elif var('tuva_schema_prefix',None) != None -%}{{var('tuva_schema_prefix')}}_tuva_chronic_conditions
           {% else %}tuva_chronic_conditions{%- endif -%}
-        alias: chronic_conditions_wide
+        alias: final_chronic_conditions_wide
         tags: tuva_chronic_conditions
         materialized: table
       tests:
